BXC-4627 update tests and search filters